--- a/index.html
+++ b/index.html
@@ -4,20 +4,66 @@
         <!-- met data and dependencies -->
         <title>some title</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Domine">
     </head>
     <body>
         <header>
-            <h1>steve carpenter</h1>
-            <p>coder</p>
+            <h2 class="large-text">Steve Carpenter</h2>
+            <p class="small-text">enthusiast of clean code, steel road bicycles, and mechanical keyboards</p>
         </header>
 
         <main>
-            <h2>Project:</h2>
-            <img src="http://placehold.it/300x300">
-            <img src="http://placehold.it/300x300">
+            <h1 class="large-text">About Me:</h1>
+            <p class="small-text">
+                I moved to Seattle 6 years ago from Omaha, NE after graduating from University of Nebraska-Lincoln.
+                After moving to Seattle I started working as a Computer Engineer at a Fiber Optics company writing
+                deviced drivers in C for a proprietary operating system and developer tools in Python.
+            </p>
+            <p class="small-text">
+                In my spare time, I met my current wife, Natasha and we started riding bicycles, sailing, and generally
+                taking advantage of all the outdoor activities that Seattle has to offer. During this time, I became
+                obsessed with building road bikes using vintage steel frames acquired off various auction sites and
+                modern components. I built four steel framed bicycles from the frame up including a 1974 Schwinn, a 1970s Chesini
+                Arena, 1961 Legnano, and a 1970s Windsor Professional.
+            </p>
+            <p class="small-text">
+                More recently, I developed another hobby of collecting, building, and tweaking mechanical keyboards. This
+                is definitely a niche hobby although among the PC gaming community in South Korea it has become incredibly
+                popular.
+            </p>
+            <p class="small-text">
+                I'm generally interested in most tech and I really do like playing video games when I have the time. This was
+                inspiration for me to acquire a raspberry pie and put the RetroPi image on it with some of my favorite vintage
+                games. This turned out to be a great thing to play old games with friends on holidays.
+            </p>
+
+            <h1 class="large-text">Education</h1>
+            <p class="small-text">
+                B.Sc. in Computer Engineering from University of Nebraska at Lincoln
+            </p>
+
+            <h1 class="large-text">Experience</h1>
+            <p class="small-text">
+                Software Engineer I at XKL, LLC: Sept 2011 - Oct 2014
+                Software Engineer II at XKL, LLC: Oct 2014 - Sept 2017
+            </p>
+
+            <h1 class="large-text">Goals</h1>
+            <p class="small-text">
+                Currently, my primary goals are to finish the Code Fellows program including 201, 301, and 401. Once finished,
+                I hope to obtain a career as a Full Stack developer at a fun startup company with lots of interesting problems
+                to work on. A secondary goal of mine is to finish a Python port of the GNU stow program which I use to deploy
+                all my dotfiles stored on Github.
+            </p>
+
+            <h1 class="large-text">Portfolio</h1>
+            <p class="small-text">
+                Space for rent.
+            </p>
         </main>
 
         <footer></footer>
+
         <!-- Best practice is to put script tag before ending header tag -->
         <script src="app.js"></script>
     </body>
