Modified the HTML to use lots of unordered lists.

--- a/index.html
+++ b/index.html
@@ -14,47 +14,43 @@
 
         <main>
             <h1 class="large-text">About Me:</h1>
-            <p class="small-text">
-                I moved to Seattle 6 years ago from Omaha, NE after graduating from University of Nebraska-Lincoln.
-                After moving to Seattle I started working as a Computer Engineer at a Fiber Optics company writing
-                deviced drivers in C for a proprietary operating system and developer tools in Python.
-            </p>
-            <p class="small-text">
-                In my spare time, I met my current wife, Natasha and we started riding bicycles, sailing, and generally
-                taking advantage of all the outdoor activities that Seattle has to offer. During this time, I became
-                obsessed with building road bikes using vintage steel frames acquired off various auction sites and
-                modern components. I built four steel framed bicycles from the frame up including a 1974 Schwinn, a 1970s Chesini
-                Arena, 1961 Legnano, and a 1970s Windsor Professional.
-            </p>
-            <p class="small-text">
-                More recently, I developed another hobby of collecting, building, and tweaking mechanical keyboards. This
-                is definitely a niche hobby although among the PC gaming community in South Korea it has become incredibly
-                popular.
-            </p>
-            <p class="small-text">
-                I'm generally interested in most tech and I really do like playing video games when I have the time. This was
-                inspiration for me to acquire a raspberry pie and put the RetroPi image on it with some of my favorite vintage
-                games. This turned out to be a great thing to play old games with friends on holidays.
-            </p>
+            <ul class="pretty-list small-text">
+                <li>I moved to Seattle 6 years ago from Omaha, NE</li>
+                <li>I used to be a device driver and developer tool engineer</li>
+                <li>Most of my development experience is in C, Python, &amp Bash</li>
+
+                <li>My wife and I frequently bicycle, sail, and go backpacking</li>
+                <li>I taught myself how to build road bicycles by making tons of mistakes and asking Google questions</li>
+                <li>
+                    The four road bicycles I built so far include:
+                    <ul>
+                        <li>1974 Schwinn</li>
+                        <li>1970s Chesini Arena</li>
+                        <li>1961 Legnano</li>
+                        <li>1970s Windsor Professional</li>
+                    </ul>
+                </li>
+                <li>More recently, I've started building and modifying mechanical keyboards</li>
+                <li>I recently built a retro gaming station at home using a Raspberry Pi running a distro called RetroPie</li>
+            </ul>
 
             <h1 class="large-text">Education</h1>
-            <p class="small-text">
-                B.Sc. in Computer Engineering from University of Nebraska at Lincoln
-            </p>
+            <ul class="pretty-list small-text">
+                <li>BSc. in Computer Engineering from University of Nebraska at Lincoln</li>
+            </ul>
 
             <h1 class="large-text">Experience</h1>
-            <p class="small-text">
-                Software Engineer I at XKL, LLC: Sept 2011 - Oct 2014
-                Software Engineer II at XKL, LLC: Oct 2014 - Sept 2017
-            </p>
+            <ul class="pretty-list small-text">
+                <li>Software Engineer I at XKL, LLC: Sept 2011 - Oct 2014</li>
+                <li>Software Engineer II at XKL, LLC: Oct 2014 - Sept 2017</li>
+            </ul>
 
             <h1 class="large-text">Goals</h1>
-            <p class="small-text">
-                Currently, my primary goals are to finish the Code Fellows program including 201, 301, and 401. Once finished,
-                I hope to obtain a career as a Full Stack developer at a fun startup company with lots of interesting problems
-                to work on. A secondary goal of mine is to finish a Python port of the GNU stow program which I use to deploy
-                all my dotfiles stored on Github.
-            </p>
+            <ul class="pretty-list small-text">
+                <li>Finish CodeFellows bootcamp via the JavaScript route</li>
+                <li>Get a new job as a full stack developer</li>
+                <li>Finish a few personal projects I've been implementing in Python</li>
+            </ul>
 
             <h1 class="large-text">Portfolio</h1>
             <p class="small-text">
@@ -63,7 +59,6 @@
         </main>
 
         <footer></footer>
-
         <!-- Best practice is to put script tag before ending header tag -->
         <script src="app.js"></script>
     </body>
