Changed Porfolio section to a list and added the missing classes to a nested list.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>I taught myself how to build road bicycles by making tons of mistakes and asking Google questions</li>
                 <li>
                     The four road bicycles I built so far include:
-                    <ul>
+                    <ul class="pretty-list small-text">
                         <li>1974 Schwinn</li>
                         <li>1970s Chesini Arena</li>
                         <li>1961 Legnano</li>
@@ -53,9 +53,9 @@
             </ul>
 
             <h1 class="large-text">Portfolio</h1>
-            <p class="small-text">
-                Space for rent.
-            </p>
+            <ul class="pretty-list small-text">
+                <li>Space for rent</li>
+            </ul>
         </main>
 
         <footer></footer>
