linked in another google font.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- met data and dependencies -->
         <title>some title</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Domine">
+        <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Domine" rel="stylesheet">
     </head>
     <body>
         <header>
