Added top ten cities in HTML

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
 
         <main>
-            <h1 class="large-text">About Me:</h1>
+            <h1 class="large-text">About Me</h1>
             <ul class="pretty-list small-text">
                 <li>I moved to Seattle 6 years ago from Omaha, NE</li>
                 <li>I used to be a device driver and developer tool engineer</li>
@@ -33,6 +33,19 @@
                 <li>More recently, I've started building and modifying mechanical keyboards</li>
                 <li>I recently built a retro gaming station at home using a Raspberry Pi running a distro called RetroPie</li>
             </ul>
+            <h1 class="large-text">Top Ten Places to Visit</h1>
+            <ol class="small-text">
+                <li>Mallorca</li>
+                <li>Singapore</li>
+                <li>Boston</li>
+                <li>Hawaii</li>
+                <li>Belize</li>
+                <li>Stockholm</li>
+                <li>Wales</li>
+                <li>Bali</li>
+                <li>Finland</li>
+                <li>Thailand</li>
+            </ol>
 
             <h1 class="large-text">Education</h1>
             <ul class="pretty-list small-text">
