Just realized I still hadn't updated the page title.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- met data and dependencies -->
-        <title>some title</title>
+        <title>Steve Carpenter | About Me</title>
         <link rel="stylesheet" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Domine" rel="stylesheet">
     </head>
